--- a/src/renderer/assets/css/index.twstyled.css
+++ b/src/renderer/assets/css/index.twstyled.css
@@ -39,6 +39,7 @@ Improve consistency of default fonts in all browsers. (https://github.com/sindre
 		sans-serif,
 		'Apple Color Emoji',
 		'Segoe UI Emoji';
+  color: #fff;
 }/*
 Grouping content
 ================
@@ -410,11 +411,17 @@ video {
 .h-12 {
     height: 3rem
 }
+.h-48 {
+    height: 12rem
+}
 .h-full {
     height: 100%
 }
 .h-screen {
     height: 100vh
+}
+.ml-5 {
+    margin-left: 1.25rem
 }
 .pb-0 {
     padding-bottom: 0px
