--- a/src/renderer/assets/css/index.twstyled.css
+++ b/src/renderer/assets/css/index.twstyled.css
@@ -1,9 +1,7 @@
-/*
-*  测试文字
-*/
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+@import "./test.css";
 
 .btn {
   @apply px-4 text-white rounded;
